display highest bid user and bid created time

--- a/src/app/frontend/auction/auction.component.css
+++ b/src/app/frontend/auction/auction.component.css
@@ -185,3 +185,8 @@ table {
         display: inline!important;
         margin: 10px auto;
     }
+
+    .imgClass {
+        width: 40px;
+        border-radius: 50%;
+    }
