show Xrpl address to admin in (view bids) module

--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -131,6 +131,7 @@
                                         <th class="text-right">Amount</th>
                                         <th></th>
                                         <th>Currency</th>
+                                        <th>Xrpl Address</th>
                                         <th>Created At</th>
                                         <th *ngIf="showBid">Edit</th>
                                         <th *ngIf="!showBid">Winner</th>
@@ -142,6 +143,7 @@
                                         <td class="text-right">{{bid.amount}}</td>
                                         <td></td>
                                         <td>{{bid.currency}}</td>
+                                        <td>{{bid.address}}</td>
                                         <td>{{ formatDate(bid.createdAt) }}</td>
                                         <td *ngIf="showBid">
                                             <ul class="displayClass">
